QPID-8612: [Broker-J] Changed default Garbage Collector from CMS to G1 (#162)